--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.1.3",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
